--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@ashthornton/asscroll": "^2.0.11",
     "vite": "^4.0.0"
   },
   "dependencies": {
